# bess-module

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
include/: bess.h  utils.h
src/: bess.cpp  binding.cpp  utils.cpp
src/bess_module/: __init__.py  __init__.pyi  _bess.pyi
test/: tests.cpp
tests/: unit_tests.cpp
