[build-system]
requires = ["scikit-build-core >= 0.10", "pybind11 >= 2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "bess_module"
version = "0.0.1"
description = "Simulador de BESS de alta performance com backend em C++"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Carlos Eduardo Silva", email = "cen.silva@proton.me" }
]
keywords = ["bess", "simulation", "cpp", "pybind11"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/CEN-s/bess-daimon-dll"
Issues = "https://github.com/CEN-s/bess-daimon-dll/issues"

[dependency-groups]
dev = [
    "pybind11-stubgen",
    "mypy",
    "pytest",
    "hypothesis",
    "ruff",
]

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
extend-select = [
  "B",    # flake8-bugbear
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # Ruff-specific
  "UP",   # pyupgrade
]